--- a/languages/ja.json
+++ b/languages/ja.json
@@ -48,13 +48,29 @@
         "radon": "Radon",
         "oganesson": "Oganesson"
       },
+      "globalTheme": {
+        "name": "テーマモード",
+        "hint": "「クライアント」に設定すると、各プレイヤーが自身のテーマを選択できます。「ワールド」に設定すると、GMが選択したテーマが全プレイヤーに共通します。",
+        "choices": {
+          "client": "クライアント",
+          "world": "世界"
+        }
+      },
       "scale": {
         "name": "スケール",
         "hint": "HUDの縮尺を設定します。自動スケールが使用されている場合は、それにかけ合わさる状態で使用されます。"
       },
-      "noAutoscale": {
-        "name": "自動スケールしない",
-        "hint": "自動的にスケールせず、スケール設定の数字を実際のスケールとして使用します。"
+      "dialogTheme": {
+        "name": "対話テーマ",
+        "hint": "HUDから開いたダイアログにArgonテーマを適用する"
+      },
+      "autoScale": {
+        "name": "自動スケール",
+        "hint": "画面サイズに基づいてHUDを自動的に拡大縮小します。拡大縮小設定は無視されます。"
+      },
+      "alwaysOn": {
+        "name": "常時接続",
+        "hint": "トークンを選択した際に自動的にHUDを表示する"
       },
       "leftPos": {
         "name": "左位置",
@@ -128,26 +144,51 @@
         "name": "アクティブ効果を適用しない",
         "hint": "特殊なアクション（隠密、押出等）を使用したときに状態異常を付与しない。（再起動必要）"
       },
+      "noBlur": {
+        "name": "ぼかし効果を無効にする",
+        "hint": "HUDのぼかし効果を無効化します。これはパフォーマンス設定であり、パフォーマンスの問題が発生した場合にのみ使用してください。"
+      },
+      "suppressWarnings": {
+        "name": "警告を抑制する",
+        "hint": "エラーが発生した場合、警告メッセージを表示せず、代わりに静かに失敗する。"
+      },
+      "rangefinder": {
+        "name": "3Dキャンバス - レンジファインダー",
+        "hint": "HUD内のアイテムにカーソルを合わせた際に3Dキャンバス距離測定機能を有効化します。有効化するとターゲットまでの距離が表示され、ターゲットが射程外の場合、距離は赤色で表示されます。"
+      },
+      "rangepicker": {
+        "name": "ターゲットピッカー",
+        "hint": "ターゲットを必要とするアイテムやアクションを使用する際、マウスカーソルに追従するターゲットカウンターが表示されます。必要な数のターゲットが選択されるまで、必要に応じて「+/-」キーで手動で調整してください。"
+      },
+      "rangepickerclear": {
+        "name": "ターゲットピッカー - ターゲットをクリア",
+        "hint": "ターゲットを必要とするアイテムやアクションを使用する際は、ターゲット選択モードに入る前にすべてのターゲットを解除してください。"
+      },
       "thememenu": {
         "name": "テーマ",
         "hint": "Argonのテーマを選択肢、設定します。",
         "label": "テーマ詳細設定"
       }
     },
-    "tooltip": {
-      "target": {
-        "name": "ターゲット"
+    "hud": {
+      "pass": {
+        "name": "ステップ"
       },
-      "range": {
-        "name": "距離"
+      "endturn": {
+        "name": "ターン終了"
       },
-      "properties": {
-        "name": "特性"
+      "macro": {
+        "name": "マクロ",
+        "page": "ページ"
       }
     },
     "themeOptions": {
       "save": "設定保存",
       "export": "テーマを出力",
+      "savePermanent": {
+        "label": "すべてのユーザー向けにカスタムテーマを保存する",
+        "tooltip": "現在のカスタムテーマをモジュールのストレージに保存します。これにより、すべてのゲームおよび全プレイヤーでテーマが利用可能になります。保存したテーマを削除するには、ファイルエクスプローラーを使用して手動でファイルを削除する必要があります（移動先: modules/enhancedcombathud/storage/themes）。Foundry内からのファイル削除はサポートされていません。"
+      },
       "autoTextColorTitle": "背景から文字色を自動識別",
       "autoTextColorHint": "自動的にテキストの色を背景とコントラストして読みやすい色に変更します。",
       "exportThemeName": "出力テーマ名",
@@ -157,6 +198,7 @@
       },
       "themeTitle": "テーマ選択",
       "themeHint": "テーマを選択するとそのテーマの彩色設定を引き継ぎます",
+      "portrait": "ポートレートカラーズ",
       "mainAction": "アクション色",
       "bonusAction": "ボーナス・アクション色",
       "freeAction": "フリー・アクション色",
@@ -170,6 +212,7 @@
       "color": "テキスト色",
       "border": "枠色",
       "boxShadow": "枠の影の色",
+      "portraitBase": "マウスが要素上にない場合の背景色/前景色/境界線色",
       "mainActionBase": "マウスホバーしていないときの背景/前景/枠の色",
       "mainActionHover": "マウスホバーしているときの背景/前景/枠の色",
       "bonusActionBase": "マウスホバーしていないときの背景/前景/枠の色",
@@ -191,6 +234,30 @@
       "movementBaseMovement": "残りの移動を示す箱の背景/枠の色",
       "movementDashMovement": "早足の移動ぶんを示す箱の背景/枠の色",
       "movementDangerMovement": "超過ぶんの移動を示す箱の背景/枠の色"
-    }
+    },
+    "hotkey": {
+      "toggle": {
+        "name": "アルゴン戦闘HUDの表示/非表示を切り替える"
+      }
+    },
+    "err": {
+      "unsupportedActorType": "Argon: アクター型 '%t' は Argon Combat HUD でサポートされていません。",
+      "moduleNotActive": "Argon CORE: システム固有のモジュールがインストールされていないか、有効化されていません。利用可能な場合は %m モジュールをインストールし、有効化してください。"
+    },
+    "targetPicker": {
+      "dialog": {
+        "title": "ターゲットピッカー チュートリアル",
+        "list": {
+          "0": "選択済み/必須ターゲットの数はカーソルに追従します",
+          "1": "<span>左クリック</span> または <span>T</span> キーを押してトークンをターゲットに設定",
+          "2": "<span>右クリック</span>で対象の選択を解除します",
+          "3": "<span>+</span> または <span>-</span> キーを押すと、必要なターゲットの数を手動で増減できます"
+        }
+      }
+    },
+    "deleteEffectTitle": "効果を削除",
+    "deleteEffectContent": "効果を削除してもよろしいですか？",
+    "confirmRerollInitiativeTitle": "リロール・イニシアチブ",
+    "confirmRerollInitiativeContent": "本当にイニシアチブを再ロールしますか？"
   }
 }
