--- a/languages/ru.json
+++ b/languages/ru.json
@@ -48,13 +48,29 @@
         "radon": "Радон",
         "oganesson": "Оганессон"
       },
+      "globalTheme": {
+        "name": "Тематический режим",
+        "hint": "Если выбрать «Клиент», каждый игрок сможет выбрать свою собственную тему. Если выбрать «Мир», тема, выбранная ГМ, будет одинаковой для всех игроков.",
+        "choices": {
+          "client": "Клиент",
+          "world": "Мир"
+        }
+      },
       "scale": {
         "name": "Масштаб",
         "hint": "Масштаб интерфейса - если включён автоматическое масштабирование, то эта настройка будет работать как дополнительный множитель масштаба."
       },
-      "noAutoscale": {
-        "name": "Не масштабировать автоматически",
-        "hint": "Интерфейс не будет подогнан под размер экрана, а вместо этого будет использовано значение настройки Масштаб"
+      "dialogTheme": {
+        "name": "Тема диалога",
+        "hint": "Применить тему Argon к диалоговым окнам, открываемым из HUD"
+      },
+      "autoScale": {
+        "name": "Автоматическая лестница",
+        "hint": "Автоматически масштабировать HUD в зависимости от размера экрана. Игнорировать настройку масштаба"
+      },
+      "alwaysOn": {
+        "name": "Всегда включен",
+        "hint": "Автоматически показывать HUD при выборе токена"
       },
       "leftPos": {
         "name": "Отступ слева",
@@ -128,14 +144,25 @@
         "name": "Не применять активные эффекты",
         "hint": "Активные эффекты не будут применяться при использовании особых действий (требуется перезагрузка)"
       },
+      "noBlur": {
+        "name": "Отключить эффекты размытия",
+        "hint": "Отключите эффекты размытия на HUD. Это настройка производительности, которую следует использовать только в случае возникновения проблем с производительностью."
+      },
+      "suppressWarnings": {
+        "name": "Подавлять предупреждения",
+        "hint": "Если происходит ошибка, не показывайте предупреждающее сообщение, а вместо этого молча завершите работу."
+      },
       "rangefinder": {
         "name": "3D Canvas - Поисковик дистанции",
-        "hint": "Включает Поисковик дистанции для 3D Canvas при на ведении на предметы в HUD. 'Только дистанция' будет отображать дистанцию до цели. Дистанция будет красной, если цель вне досягаемости. 'Игровой режим' будет отображать шанс попадания по цели (для атак и испытаний).",
-        "choices": {
-          "none": "Отключено",
-          "rangeOnly": "Только дистанция",
-          "full": "Режим игры"
-        }
+        "hint": "Включает Поисковик дистанции для 3D Canvas при на ведении на предметы в HUD. 'Только дистанция' будет отображать дистанцию до цели. Дистанция будет красной, если цель вне досягаемости. 'Игровой режим' будет отображать шанс попадания по цели (для атак и испытаний)."
+      },
+      "rangepicker": {
+        "name": "Выбор цели",
+        "hint": "При использовании предмета или действия, требующего цели, будет отображаться счетчик целей, который следует за курсором мыши, пока не будет выбрано необходимое количество целей. При необходимости используйте клавиши +/- для ручной настройки требуемого количества целей."
+      },
+      "rangepickerclear": {
+        "name": "Выбор цели - Очистить цели",
+        "hint": "При использовании предмета или действия, требующего цели, очистите все цели перед входом в режим выбора цели."
       },
       "thememenu": {
         "name": "Настройка темы",
@@ -143,20 +170,25 @@
         "label": "Настройка тем"
       }
     },
-    "tooltip": {
-      "target": {
-        "name": "Цель"
+    "hud": {
+      "pass": {
+        "name": "Шаг"
       },
-      "range": {
-        "name": "Дистанция"
+      "endturn": {
+        "name": "Конец хода"
       },
-      "properties": {
-        "name": "Свойства"
+      "macro": {
+        "name": "Макро",
+        "page": "Страница"
       }
     },
     "themeOptions": {
       "save": "Сохранение изменений",
       "export": "Экспорт темы",
+      "savePermanent": {
+        "label": "Сохранить пользовательскую тему для всех пользователей",
+        "tooltip": "Сохраните текущую пользовательскую тему в хранилище модуля. Это сделает тему доступной во всех ваших играх и для всех игроков. Чтобы удалить сохраненную тему, вам нужно будет удалить ее файл вручную с помощью файлового проводника (перейдите в: modules/enhancedcombathud/storage/themes). Удаление файлов из Foundry не поддерживается."
+      },
       "autoTextColorTitle": "Автоматически выставлять цвет текста на основе фона",
       "autoTextColorHint": "Цвет текста будет автоматически подобран, чтобы быть читаемым на выбранном фоне.",
       "exportThemeName": "Название темы:",
@@ -166,6 +198,7 @@
       },
       "themeTitle": "Выбор темы",
       "themeHint": "Выбор темы также изменит настройки палитры.",
+      "portrait": "Цвета портрета",
       "mainAction": "Цвет основных действий",
       "bonusAction": "Цвет бонусных действий",
       "freeAction": "Цвет свободных действий",
@@ -179,6 +212,7 @@
       "color": "Цвет текста",
       "border": "Цвет рамки",
       "boxShadow": "Цвет теней",
+      "portraitBase": "Цвета фона/переднего плана/границы, когда курсор мыши не находится над элементом",
       "mainActionBase": "Цвета фона/текста/рамки, когда курсор не над элементом",
       "mainActionHover": "Цвета фона/текста/рамки, когда курсор над элементом",
       "bonusActionBase": "Цвета фона/текста/рамки, когда курсор не над элементом",
@@ -200,6 +234,30 @@
       "movementBaseMovement": "Фон/тень ячеек, отражающих доступные клетки перемещения",
       "movementDashMovement": "Фон/тень ячеек, отражающих клетки перемещения рывком",
       "movementDangerMovement": "Фон/тень ячеек, отражающих превышающие доступные клетки перемещения"
-    }
+    },
+    "hotkey": {
+      "toggle": {
+        "name": "Включить/выключить боевой HUD Argon"
+      }
+    },
+    "err": {
+      "unsupportedActorType": "Argon: Тип актера «%t» не поддерживается Argon Combat HUD.",
+      "moduleNotActive": "Argon CORE: Системный модуль не установлен или не активен, пожалуйста, установите и включите модуль %m, если он доступен."
+    },
+    "targetPicker": {
+      "dialog": {
+        "title": "Учебник по Target Picker",
+        "list": {
+          "0": "Количество выбранных/требуемых целей будет отображаться за курсором.",
+          "1": "<span>Щелкните левой кнопкой мыши</span> или нажмите <span>T</span>, чтобы выбрать токен.",
+          "2": "<span>Щелкните правой кнопкой мыши</span>, чтобы отменить выбор цели.",
+          "3": "Нажмите клавишу <span>+</span> или <span>-</span>, чтобы вручную увеличить/уменьшить количество требуемых целей."
+        }
+      }
+    },
+    "deleteEffectTitle": "Удалить эффект",
+    "deleteEffectContent": "Вы уверены, что хотите удалить эффект? ",
+    "confirmRerollInitiativeTitle": "Инициатива по пересчету",
+    "confirmRerollInitiativeContent": "Вы уверены, что хотите перебросить инициативу?"
   }
 }
