--- a/languages/ko.json
+++ b/languages/ko.json
@@ -48,13 +48,29 @@
         "radon": "라돈",
         "oganesson": "오가네손"
       },
+      "globalTheme": {
+        "name": "테마 모드",
+        "hint": "'클라이언트'로 설정하면 모든 플레이어가 각자 테마를 선택할 수 있습니다. '월드'로 설정하면 GM이 선택한 테마가 모든 플레이어에게 동일하게 적용됩니다.",
+        "choices": {
+          "client": "고객",
+          "world": "세계"
+        }
+      },
       "scale": {
         "name": "크기",
         "hint": "HUD 크기 - 자동 조절이 활성화되어있다면 이 설정의 수가 자동계산되는 수에 곱해진 크기가 됩니다."
       },
-      "noAutoscale": {
-        "name": "자동 조절 끄기",
-        "hint": "화면에 맞게 HUD의 크기를 조정하지 않고 크기 조정 설정에서 고정 값을 사용합니다."
+      "dialogTheme": {
+        "name": "대화 테마",
+        "hint": "HUD에서 열린 대화 상자에 Argon 테마 적용"
+      },
+      "autoScale": {
+        "name": "자동 스케일",
+        "hint": "화면 크기에 따라 HUD를 자동으로 조정합니다. 스케일 설정을 무시합니다."
+      },
+      "alwaysOn": {
+        "name": "항상 켜짐",
+        "hint": "토큰을 선택할 때마다 자동으로 HUD를 표시합니다"
       },
       "leftPos": {
         "name": "좌측 위치",
@@ -128,26 +144,51 @@
         "name": "활성화된 효과 미적용",
         "hint": "특수 행동을 사용할 때 활성화된 효과를 적용하지 않습니다(새로고침 필요)"
       },
+      "noBlur": {
+        "name": "흐림 효과 비활성화",
+        "hint": "HUD의 흐림 효과를 비활성화합니다. 이는 성능 설정으로, 성능 문제가 발생할 경우에만 사용해야 합니다."
+      },
+      "suppressWarnings": {
+        "name": "경고 메시지 표시 안 함",
+        "hint": "오류가 발생하면 경고 메시지를 표시하지 말고 대신 조용히 실패하도록 하십시오."
+      },
+      "rangefinder": {
+        "name": "3D 캔버스 - 거리 측정기",
+        "hint": "HUD에서 아이템 위에 마우스를 올렸을 때 3D 캔버스 거리 측정기를 활성화합니다. 활성화 시 대상까지의 거리가 표시되며, 대상이 사정거리 밖일 경우 거리가 빨간색으로 표시됩니다."
+      },
+      "rangepicker": {
+        "name": "대상 선택기",
+        "hint": "대상 지정 기능이 필요한 아이템이나 액션을 사용할 때, 마우스 커서를 따라다니는 대상 카운터가 표시됩니다. 필요한 대상 수가 선택될 때까지 +/- 키를 사용하여 수동으로 대상 수를 조정하세요."
+      },
+      "rangepickerclear": {
+        "name": "대상 선택기 - 대상 지우기",
+        "hint": "대상 선택 모드로 진입하기 전에 대상이 필요한 아이템이나 행동을 사용할 때는 모든 대상을 해제하십시오."
+      },
       "thememenu": {
         "name": "테마 커스텀",
         "hint": "Argon의 테마를 조정, 교체, 커스텀합니다.",
         "label": "테마 조정"
       }
     },
-    "tooltip": {
-      "target": {
-        "name": "목표"
+    "hud": {
+      "pass": {
+        "name": "단계"
       },
-      "range": {
-        "name": "사거리"
+      "endturn": {
+        "name": "턴 종료"
       },
-      "properties": {
-        "name": "분류"
+      "macro": {
+        "name": "매크로",
+        "page": "페이지"
       }
     },
     "themeOptions": {
       "save": "설정 저장",
       "export": "설정 내보내기",
+      "savePermanent": {
+        "label": "모든 사용자를 위한 사용자 지정 테마 저장",
+        "tooltip": "현재 사용자 지정 테마를 모듈 저장소에 저장합니다. 이렇게 하면 모든 게임과 모든 플레이어에게 테마가 적용됩니다. 저장된 테마를 제거하려면 파일 탐색기를 사용하여 해당 파일을 수동으로 삭제해야 합니다(경로: modules/enhancedcombathud/storage/themes). Foundry 내에서 파일을 삭제하는 것은 지원되지 않습니다."
+      },
       "autoTextColorTitle": "배경에 맞추어 글씨 색상 자동 설정",
       "autoTextColorHint": "이 설정은 배경색을 기반으로 하여 텍스트 색상을 읽기 쉬운 색상으로 조정합니다.",
       "exportThemeName": "내보내는 테마 이름:",
@@ -157,6 +198,7 @@
       },
       "themeTitle": "테마 선택",
       "themeHint": "테마를 선택하면 조합되어 있는 색상 팔레트가 Argon에 적용됩니다.",
+      "portrait": "초상화 색채",
       "mainAction": "행동 색상",
       "bonusAction": "추가 행동 색상",
       "freeAction": "자유 행동 색상",
@@ -170,6 +212,7 @@
       "color": "글씨 색상",
       "border": "테두리 색상",
       "boxShadow": "칸 그림자 색상",
+      "portraitBase": "배경색/전경색/테두리색 (마우스가 요소에 위치하지 않을 때)",
       "mainActionBase": "마우스를 올리지 않았을 때의 배경/전경/테두리 색상",
       "mainActionHover": "마우스를 올렸을 때의 배경/전경/테두리 색상",
       "bonusActionBase": "마우스를 올리지 않았을 때의 배경/전경/테두리 색상",
@@ -191,6 +234,30 @@
       "movementBaseMovement": "움직일 수 있는 수를 나타내는 칸의 배경/그림자 색상",
       "movementDashMovement": "질주 시의 속도를 나타내는 칸의 배경/그림자 색상",
       "movementDangerMovement": "이동 수가 초과된 만큼을 나타내는 칸의 배경/그림자 색상"
-    }
+    },
+    "hotkey": {
+      "toggle": {
+        "name": "아르곤 전투 HUD 토글"
+      }
+    },
+    "err": {
+      "unsupportedActorType": "아르곤: 배우 유형 '%t'는 아르곤 전투 HUD에서 지원되지 않습니다.",
+      "moduleNotActive": "Argon CORE: 시스템 전용 모듈이 설치되지 않았거나 활성화되지 않았습니다. 사용 가능한 경우 %m 모듈을 설치하고 활성화하십시오."
+    },
+    "targetPicker": {
+      "dialog": {
+        "title": "타겟 선택기 튜토리얼",
+        "list": {
+          "0": "선택/필수 대상의 수는 커서를 따라갑니다",
+          "1": "<span>왼쪽 클릭</span> 또는 <span>T</span> 키를 눌러 토큰을 선택하세요",
+          "2": "<span>우클릭</span>하여 대상 선택 취소",
+          "3": "필요한 목표 수를 수동으로 늘리거나 줄이려면 <span>+</span> 또는 <span>-</span> 키를 누르십시오."
+        }
+      }
+    },
+    "deleteEffectTitle": "효과 삭제",
+    "deleteEffectContent": "효과를 삭제하시겠습니까? ",
+    "confirmRerollInitiativeTitle": "재롤 이니셔티브",
+    "confirmRerollInitiativeContent": "이니셔티브를 다시 굴리시겠습니까?"
   }
 }
